--- a/relab-client/angular.json
+++ b/relab-client/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "relab-client": {
+    "ang-maps": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,12 +13,12 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/relab-client",
+            "outputPath": "dist/ang-maps",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": true,
+            "aot": false,
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -41,6 +41,7 @@
               "sourceMap": false,
               "extractCss": true,
               "namedChunks": false,
+              "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
@@ -62,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "relab-client:build"
+            "browserTarget": "ang-maps:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "relab-client:build:production"
+              "browserTarget": "ang-maps:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "relab-client:build"
+            "browserTarget": "ang-maps:build"
           }
         },
         "test": {
@@ -110,15 +111,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "relab-client:serve"
+            "devServerTarget": "ang-maps:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "relab-client:serve:production"
+              "devServerTarget": "ang-maps:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "relab-client"
+  "defaultProject": "ang-maps"
 }
